# chat-test-infra

./: Cargo.toml  Makefile  samconfig.toml  template.yaml  websocket.yaml
src/: lib.rs
src/authorizers/: websocket-authorizer-lambda.rs  websocket-on-disconnect-lambda.rs
src/endpoints/: get-chat-messages.rs  get-user-chats.rs  get-user-info.rs  mark-as-read.rs  test-lambda.rs
src/handlers/: message-insert-event-handler.rs  mod.rs  test-lambda.rs
src/models/: chat.rs  common.rs  mod.rs  user.rs
src/triggers/: cognito-post-confirmation.rs  dynamodb-stream-processor.rs
src/utils/: http.rs  jwt.rs  mod.rs  user.rs
src/websocket/: websocket-send-message-lambda.rs
