[package]
name = "chat-test-infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "^0.51"
aws-sdk-dynamodb = "^0.21"
aws-sdk-s3 = "^0.21"
aws-smithy-client = { version = "^0.52", features = ["test-util"] }
lambda_http = "^0.7"
lambda_runtime = "0.7.1"
aws_lambda_events = "0.7.2"
tokio = { version = "^1", features = ["full"] }
ulid = "^1.0"
chrono = "^0.4"
serde = "^1.0"
serde_json = "^1.0"
serde_dynamo = { version = "^4.0", features = ["aws-sdk-dynamodb+0_21"] }
image = "0.24.5"
initials = "0.1.2"

[dev-dependencies]
aws-smithy-http = "^0.52"
aws-types = { version = "^0.51", features = ["hardcoded-credentials"] }
http = "^0.2"

# Binary files

[[bin]]
name = "test-lambda"
path = "src/endpoints/test-lambda.rs"

[[bin]]
name = "cognito-post-confirmation-lambda"
path = "src/triggers/cognito-post-confirmation.rs"
