[package]
name = "chat-test-infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "^0.51"
aws-sdk-dynamodb = "^0.21"
aws-sdk-s3 = "^0.21"
aws-sdk-cognitoidentityprovider = "^0.21"
aws-sdk-apigatewaymanagement = "^0.21"
aws-smithy-client = { version = "^0.52", features = ["test-util"] }
lambda_http = "0.7.0"
lambda_runtime = "0.7.0"
aws_lambda_events = "0.7.0"
jsonwebtokens-cognito = "0.1.1"
base64 = "0.21.0"
tokio = { version = "^1", features = ["full"] }
ulid = "^1.0"
chrono = "^0.4"
serde = "^1.0"
serde_json = "^1.0"
serde_dynamo = { version = "^4.0", features = ["aws-sdk-dynamodb+0_21"] }
image = "0.24.5"
initials-revamped = "0.1.2"

[dev-dependencies]
aws-smithy-http = "^0.52"
aws-types = { version = "^0.52", features = ["hardcoded-credentials"] }
http = "^0.2"

[dependencies.openssl]
features = ["vendored"]
version = "0.10"

# Binary files

[[bin]]
name = "get-user-info-lambda"
path = "src/endpoints/get-user-info.rs"

[[bin]]
name = "get-user-chats-lambda"
path = "src/endpoints/get-user-chats.rs"

[[bin]]
name = "mark-as-read-lambda"
path = "src/endpoints/mark-as-read.rs"

[[bin]]
name = "cognito-post-confirmation-lambda"
path = "src/triggers/cognito-post-confirmation.rs"

[[bin]]
name = "dynamodb-stream-processor"
path = "src/triggers/dynamodb-stream-processor.rs"

[[bin]]
name = "websocket-authorizer-lambda"
path = "src/authorizers/websocket-authorizer-lambda.rs"

[[bin]]
name = "websocket-on-disconnect-lambda"
path = "src/authorizers/websocket-on-disconnect-lambda.rs"

[[bin]]
name = "websocket-send-message-lambda"
path = "src/websocket/websocket-send-message-lambda.rs"
